[package]
name = "rustplayer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audiotags = "0.5.0"
crossterm = "0.27.0"
eyre = "0.6.12"
mp3-duration = "0.1.10"
rand = "0.8.5"
ratatui = "0.26.2"
rodio = "0.18.0"

[dev-dependencies]
tempdir = "0.3.7"

[lints.clippy]
complexity = "warn"
pedantic = "warn"
perf = "warn"
style = "warn"
suspicious = "warn"
module_name_repetitions = "allow"
